buildscript {
	dependencies {
		classpath "org.yaml:snakeyaml:${snakeYamlVersion}"
	}
}

plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'io.franzbecker.gradle-lombok' version '5.0.0'
    id 'com.diffplug.spotless' version '8.0.0'
}

import io.franzbecker.gradle.lombok.task.DelombokTask
import org.yaml.snakeyaml.Yaml

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    withSourcesJar()
    withJavadocJar()
}

def resourcesDir = sourceSets.main.resources.srcDirs.first()
def config = new Yaml().load( new File("${resourcesDir}/plugin.yml").newInputStream() )

base {
    archivesName = "${config.name}"
}
version = "${config.version}"

repositories {
    mavenCentral()
}

eclipse {
    classpath {
        downloadJavadoc = true
        downloadSources = true
    }
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

configurations {
	mockitoAgent { transitive = false }
	provided
	// Make compile extend from our provided configuration so that things added to bundled end up on the compile classpath
	implementation.extendsFrom(provided)
}

dependencies {
	compileOnly project(':Ikala-Core')
	compileOnly project(':Random')
	implementation "com.opencsv:opencsv:${openCSVVersion}"
	provided "io.netty:netty-all:${nettyVersion}"
	provided "com.google.guava:guava:${guavaVersion}"

	// Testing
	testImplementation project(':Ikala-Core')
	testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
	testImplementation "org.mockito:mockito-core:${mockitoVersion}"
	testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"

	mockitoAgent "org.mockito:mockito-core:${mockitoVersion}"

	// lombok
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

tasks.register('delombok', DelombokTask) {
	description = 'Delomboks the source code'
    ext.outputDir = file('build/src-delomboked')
    outputs.dir(outputDir)
    sourceSets.main.java.srcDirs.each { 
        inputs.dir(it)
        args(it, "-d", outputDir)
    }
    doFirst {
        outputDir.deleteDir()
    }
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
	testLogging {
		exceptionFormat = 'full'
		events = ['skipped', 'failed']
		showStandardStreams = true
	}
}

tasks.named('javadoc') {
	dependsOn = delombok as Iterable<?>
	source = delombok.outputDir
	failOnError = false
}

tasks.withType(Javadoc).configureEach {
	options.addStringOption('Xdoclint:-missing', '-quiet')
}

tasks.named('clean') {
	delete 'build/src-delomboked'
	delete 'bin'
	// tests generate this
	delete 'logs'
}

tasks.named('jar') {
    from {
        configurations.provided.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('check') {
	dependsOn spotlessApply
}

spotless {
	java {
		target fileTree('.') {
			include '**/*.java'
			exclude '**/build/**', '**/build-*/**'
		}
		cleanthat().sourceCompatibility('17')
			.addMutator('SafeAndConsensual')
			.addMutator('SafeButNotConsensual')
			.addMutator('SafeButControversial')
			.excludeMutator('AvoidInlineConditionals')
			.includeDraft(false)
		googleJavaFormat('1.21.0').aosp()
		// eclipse('4.27').configFile('formatting.xml')
		toggleOffOn()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
		importOrder('\\#', 'com.ikalagaming', '', 'java|javax')
		formatAnnotations()
	}
}
